// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/Table default 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Table
    className=""
    emptyMessage="No entries found."
    headers={Array []}
    outline={false}
    rows={
      Array [
        Object {
          "cells": Array [
            "a1",
            "b1",
            "c1",
          ],
        },
        Object {
          "cells": Array [
            "a2",
            "b2",
            "c2",
          ],
        },
        Object {
          "cells": Array [
            "a3",
            "b3",
            "c3",
          ],
        },
      ]
    }
  >
    <table
      className="root"
    >
      <tbody>
        <tr
          className="row"
          key="0"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a1
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b1
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c1
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="1"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a2
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b2
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c2
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="2"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a3
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b3
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c3
            </td>
          </Td>
        </tr>
      </tbody>
    </table>
  </Table>
</div>
`;

exports[`Storyshots UI/Table empty 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Table
    className=""
    emptyMessage="No entries found."
    headers={Array []}
    outline={false}
    rows={Array []}
  >
    <table
      className="root"
    >
      <tbody>
        <tr>
          <Td
            className="emptyData"
            colSpan={1}
          >
            <td
              className="cell emptyData"
              colSpan={1}
            >
              No entries found.
            </td>
          </Td>
        </tr>
      </tbody>
    </table>
  </Table>
</div>
`;

exports[`Storyshots UI/Table empty with custom element 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Table
    className=""
    emptyMessage={
      <p
        style={
          Object {
            "outline": "1px solid lightgray",
          }
        }
      >
        No items available
      </p>
    }
    headers={Array []}
    outline={false}
    rows={Array []}
  >
    <table
      className="root"
    >
      <tbody>
        <tr>
          <Td
            className="emptyData"
            colSpan={1}
          >
            <td
              className="cell emptyData"
              colSpan={1}
            >
              <p
                style={
                  Object {
                    "outline": "1px solid lightgray",
                  }
                }
              >
                No items available
              </p>
            </td>
          </Td>
        </tr>
      </tbody>
    </table>
  </Table>
</div>
`;

exports[`Storyshots UI/Table with custom content and attributes 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Table
    className=""
    emptyMessage="No entries found."
    headers={
      Array [
        " ",
        Object {
          "children": "Col A (right)",
          "style": Object {
            "textAlign": "right",
          },
        },
        Object {
          "children": "Col B (center)",
          "style": Object {
            "textAlign": "center",
          },
        },
        Object {
          "children": "Col C (underline)",
          "style": Object {
            "textDecoration": "underline",
          },
        },
      ]
    }
    outline={false}
    rows={
      Array [
        Object {
          "cells": Array [
            <em>
              a1
            </em>,
            Object {
              "children": "b1",
              "style": Object {
                "color": "red",
                "textAlign": "center",
              },
            },
            "c1",
          ],
          "header": <strong>
            row 1
          </strong>,
        },
        Object {
          "cells": Array [
            "a2",
            "b2",
            "c2",
          ],
          "header": <strong>
            row 2
          </strong>,
          "style": Object {
            "color": "blue",
            "fontSize": "1.5em",
          },
        },
        Object {
          "cells": Array [
            "a3",
            "b3",
            "c3",
          ],
          "header": <strong>
            row 2
          </strong>,
        },
      ]
    }
  >
    <table
      className="root"
    >
      <thead>
        <tr>
          <Th
            className=""
            key="0"
          >
            <th
              className="cell"
            >
               
            </th>
          </Th>
          <Th
            className=""
            key="1"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <th
              className="cell"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Col A (right)
            </th>
          </Th>
          <Th
            className=""
            key="2"
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <th
              className="cell"
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              Col B (center)
            </th>
          </Th>
          <Th
            className=""
            key="3"
            style={
              Object {
                "textDecoration": "underline",
              }
            }
          >
            <th
              className="cell"
              style={
                Object {
                  "textDecoration": "underline",
                }
              }
            >
              Col C (underline)
            </th>
          </Th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="row"
          key="0"
        >
          <Th
            className=""
          >
            <th
              className="cell"
            >
              <strong>
                row 1
              </strong>
            </th>
          </Th>
          <Td
            className=""
            key="0"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              <em>
                a1
              </em>
            </td>
          </Td>
          <Td
            className=""
            key="1"
            style={
              Object {
                "color": "red",
                "textAlign": "center",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "color": "red",
                  "textAlign": "center",
                }
              }
            >
              b1
            </td>
          </Td>
          <Td
            className=""
            key="2"
            style={
              Object {
                "textDecoration": "underline",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "textDecoration": "underline",
                }
              }
            >
              c1
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="1"
          style={
            Object {
              "color": "blue",
              "fontSize": "1.5em",
            }
          }
        >
          <Th
            className=""
          >
            <th
              className="cell"
            >
              <strong>
                row 2
              </strong>
            </th>
          </Th>
          <Td
            className=""
            key="0"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              a2
            </td>
          </Td>
          <Td
            className=""
            key="1"
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              b2
            </td>
          </Td>
          <Td
            className=""
            key="2"
            style={
              Object {
                "textDecoration": "underline",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "textDecoration": "underline",
                }
              }
            >
              c2
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="2"
        >
          <Th
            className=""
          >
            <th
              className="cell"
            >
              <strong>
                row 2
              </strong>
            </th>
          </Th>
          <Td
            className=""
            key="0"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              a3
            </td>
          </Td>
          <Td
            className=""
            key="1"
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              b3
            </td>
          </Td>
          <Td
            className=""
            key="2"
            style={
              Object {
                "textDecoration": "underline",
              }
            }
          >
            <td
              className="cell"
              style={
                Object {
                  "textDecoration": "underline",
                }
              }
            >
              c3
            </td>
          </Td>
        </tr>
      </tbody>
    </table>
  </Table>
</div>
`;

exports[`Storyshots UI/Table with headers 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Table
    className=""
    emptyMessage="No entries found."
    headers={
      Array [
        "Col A",
        "Col B",
        "Col C",
      ]
    }
    outline={false}
    rows={
      Array [
        Object {
          "cells": Array [
            "a1",
            "b1",
            "c1",
          ],
        },
        Object {
          "cells": Array [
            "a2",
            "b2",
            "c2",
          ],
        },
        Object {
          "cells": Array [
            "a3",
            "b3",
            "c3",
          ],
        },
      ]
    }
  >
    <table
      className="root"
    >
      <thead>
        <tr>
          <Th
            className=""
            key="0"
          >
            <th
              className="cell"
            >
              Col A
            </th>
          </Th>
          <Th
            className=""
            key="1"
          >
            <th
              className="cell"
            >
              Col B
            </th>
          </Th>
          <Th
            className=""
            key="2"
          >
            <th
              className="cell"
            >
              Col C
            </th>
          </Th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="row"
          key="0"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a1
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b1
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c1
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="1"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a2
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b2
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c2
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="2"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a3
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b3
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c3
            </td>
          </Td>
        </tr>
      </tbody>
    </table>
  </Table>
</div>
`;

exports[`Storyshots UI/Table with outline 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Table
    className=""
    emptyMessage="No entries found."
    headers={
      Array [
        "Col A",
        "Col B",
        "Col C",
      ]
    }
    outline={true}
    rows={
      Array [
        Object {
          "cells": Array [
            "a1",
            "b1",
            "c1",
          ],
        },
        Object {
          "cells": Array [
            "a2",
            "b2",
            "c2",
          ],
        },
        Object {
          "cells": Array [
            "a3",
            "b3",
            "c3",
          ],
        },
      ]
    }
  >
    <table
      className="root outline"
    >
      <thead>
        <tr>
          <Th
            className=""
            key="0"
          >
            <th
              className="cell"
            >
              Col A
            </th>
          </Th>
          <Th
            className=""
            key="1"
          >
            <th
              className="cell"
            >
              Col B
            </th>
          </Th>
          <Th
            className=""
            key="2"
          >
            <th
              className="cell"
            >
              Col C
            </th>
          </Th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="row"
          key="0"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a1
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b1
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c1
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="1"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a2
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b2
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c2
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="2"
        >
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a3
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b3
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c3
            </td>
          </Td>
        </tr>
      </tbody>
    </table>
  </Table>
</div>
`;

exports[`Storyshots UI/Table with row headers 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "width": "100%",
    }
  }
>
  <Table
    className=""
    emptyMessage="No entries found."
    headers={Array []}
    outline={false}
    rows={
      Array [
        Object {
          "cells": Array [
            "a1",
            "b1",
            "c1",
          ],
          "header": "row 1",
        },
        Object {
          "cells": Array [
            "a2",
            "b2",
            "c2",
          ],
          "header": "row 2",
        },
        Object {
          "cells": Array [
            "a3",
            "b3",
            "c3",
          ],
          "header": "row 3",
        },
      ]
    }
  >
    <table
      className="root"
    >
      <tbody>
        <tr
          className="row"
          key="0"
        >
          <Th
            className=""
          >
            <th
              className="cell"
            >
              row 1
            </th>
          </Th>
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a1
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b1
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c1
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="1"
        >
          <Th
            className=""
          >
            <th
              className="cell"
            >
              row 2
            </th>
          </Th>
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a2
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b2
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c2
            </td>
          </Td>
        </tr>
        <tr
          className="row"
          key="2"
        >
          <Th
            className=""
          >
            <th
              className="cell"
            >
              row 3
            </th>
          </Th>
          <Td
            className=""
            key="0"
          >
            <td
              className="cell"
            >
              a3
            </td>
          </Td>
          <Td
            className=""
            key="1"
          >
            <td
              className="cell"
            >
              b3
            </td>
          </Td>
          <Td
            className=""
            key="2"
          >
            <td
              className="cell"
            >
              c3
            </td>
          </Td>
        </tr>
      </tbody>
    </table>
  </Table>
</div>
`;
